# OpenTsiolkovsky

./: .gitignore  .travis.yml  .vercelignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  README_for_windows.md  TODO.md  rust-toolchain.toml  vercel.json  要求書.md  設計書.md
.github/workflows/: ci.yml
OpenTsiolkovsky.xcodeproj/: project.pbxproj
OpenTsiolkovsky.xcodeproj/project.xcworkspace/xcuserdata/ina111.xcuserdatad/: UserInterfaceState.xcuserstate
OpenTsiolkovsky.xcodeproj/xcuserdata/ina111.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
OpenTsiolkovsky.xcodeproj/xcuserdata/ina111.xcuserdatad/xcschemes/: Tsiolkovsky.xcscheme  Tsiolkovsky_Epsilon.xcscheme  xcschememanagement.plist
doc/: OpenTsiolkovsky_techdoc.tex
docs/: README.md  README.rust_frontend.md  configuration.md  development.md  quick-start.md  wasm.md  wasm_build.md
docs/api/: web_api.md
examples/: param_momo.json  param_sample_01.json
examples/SS-520-4/: SS520-4-2_thrust.csv  SS520-4-3_thrust.csv  param_SS520-4.json
frontend/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/charts/: config.ts  plugins.ts
frontend/src/components/: GraphPanel.tsx  SimulationPanel.tsx  TrajectoryViewer.tsx  shared.tsx  ui.tsx
frontend/src/components/forms/: AerodynamicsForm.tsx  LaunchForm.tsx  StageForm.tsx  WindForm.tsx
frontend/src/components/shared/: EditableTable.tsx  FormFields.tsx
frontend/src/components/ui/: accordion.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  switch.tsx  tabs.tsx
frontend/src/config/: defaults.ts
frontend/src/hooks/: useChartData.ts  useSimulation.ts
frontend/src/lib/: chartUtils.ts  charts.ts  geo.ts  kmlGenerator.ts  simulation.ts  types.ts  utils.ts  wasm.ts
frontend/src/types/: three-extras.d.ts  wasm-shim.d.ts
frontend/src/utils/: denoise.ts  validation.ts
legacy_cpp/OpenTsiolkovsky.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
legacy_cpp/src/: rocket.hpp
legacy_cpp/test/: test_mat.cpp  test_quat.cpp
misc/json_editor/: json_editor.html
misc/pyIIP/: OpenVerne.py  example_01.py  example_02.py  pyIIP.py
misc/sample/SS-520-4/: SS520-4-1_CD.csv  SS520-4-1_attitude.csv  SS520-4-1_thrust.csv  param_SS520-4.json
rust/: Cargo.toml  output_dynamics_cpp.csv  run_cppcsv2_dynamics_cpp.csv  run_cppcsv_dynamics_cpp.csv  run_cppcsv_sub2_dynamics_cpp.csv  rustfmt.toml
rust/crates/cli/: Cargo.toml
rust/crates/cli/src/: lib.rs  main.rs  wasm.rs
rust/crates/core/: Cargo.toml
rust/crates/core/src/: io.rs  lib.rs  rocket.rs  simulator.rs
rust/crates/core/src/io/: mod.rs
rust/crates/core/src/math/: constants.rs  integrator.rs  linalg.rs  mod.rs
rust/crates/core/src/physics/: atmosphere.rs  coordinates.rs  gravity.rs  mod.rs
rust/crates/core/src/rocket/: mod.rs
rust/crates/core/src/simulator/: mod.rs
rust/crates/core/tests/: integration.rs
rust/crates/web/: Cargo.toml
rust/crates/web/src/: main.rs
rust/src/: io.rs  lib.rs  main.rs  math.rs  physics.rs  rocket.rs  simulator.rs  wasm.rs
rust/tests/: integration.rs
scr/: Orbit.cpp  Orbit.hpp  air.cpp  air.hpp  coordinate_transform.cpp  coordinate_transform.hpp  fileio.cpp  fileio.hpp  gravity.cpp  gravity.hpp  main.cpp  rocket.cpp  rocket.hpp
scripts/: vercel-build.sh  wasm_build.sh
src/: Orbit.cpp  Orbit.hpp  air.cpp  air.hpp  coordinate_transform.cpp  coordinate_transform.hpp  fileio.hpp  gravity.cpp  gravity.hpp  io.rs  lib.rs  main.cpp  main.rs  math.rs  physics.rs  rocket.cpp  rocket.hpp  rocket.rs  simulator.rs  tests.rs  wasm.rs
test/: plot_1dof.py  test_air.py  test_drag.py  test_flight.py  test_gravity.py
tools/: calc_gravity.py  calc_path_rotation.py  compare_cpp_csv.py  coordinate_transform.py  make_thrust_turn_IIP_circle.py  mc_all_in_dir.py  merge_csv_files.py  merge_csvfiles.py  mkdirs_cutoff.py  outlier_detector_2d.py  stat_jettison_area_4dir.py
