[package]
name = "openTsiolkovsky"
version = "0.6.0"
edition = "2024"
description = "OpenTsiolkovsky rocket flight simulator with CLI and WASM support"
license = "MIT"
repository = "https://github.com/istellartech/OpenTsiolkovsky"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "openTsiolkovsky-cli"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
# Core dependencies
nalgebra = { version = "0.32", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
thiserror = "1.0"

# CLI dependencies
clap = { version = "4.4", features = ["derive"], optional = true }

# WASM dependencies
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["cli"]
cli = ["clap"]
wasm = ["wasm-bindgen", "console_error_panic_hook"]

[dev-dependencies]
approx = "0.5"
tempfile = "3.8"