[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli", 
    "crates/web",
]

[workspace.dependencies]
nalgebra = { version = "0.32", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
rayon = "1.7"
thiserror = "1.0"
approx = "0.5"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]