[package]
name = "openTsiolkovsky-cli"
version = "0.1.0"
edition = "2021"
description = "CLI and WebAssembly interface for OpenTsiolkovsky"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
openTsiolkovsky-core = { path = "../core" }
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
csv = { workspace = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["cli"]
cli = []
wasm = ["wasm-bindgen", "js-sys", "web-sys", "console_error_panic_hook", "serde-wasm-bindgen", "serde_json"]
