[package]
name = "openTsiolkovsky-core"
version = "0.1.0"
edition = "2021"
description = "Core simulation engine for OpenTsiolkovsky rocket flight simulator"
license = "MIT"

[dependencies]
nalgebra = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
tempfile = "3.8"