[package]
name = "openTsiolkovsky-web"
version = "0.1.0"
edition = "2021"
description = "Web API server for OpenTsiolkovsky"
license = "MIT"

[dependencies]
openTsiolkovsky-core = { path = "../core" }
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { workspace = true }
serde_json = { workspace = true }
